Trying to fix overflow

--- a/styles.css
+++ b/styles.css
@@ -6,6 +6,15 @@ html {
     font-size: 9px;
 }
 
+body {
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    overflow-y: hidden;
+    overflow-x: hidden;
+    -webkit-overflow-scrolling: touch;
+}
+
 #body {
     overflow-y: hidden;
 }
